[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rl-data-analyst-env"
version = "1.0.0"
description = "Reinforcement Learning environment for automated data analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/truptibhalekarr/RL_Data_Analyst_Agent"
Repository = "https://github.com/truptibhalekarr/RL_Data_Analyst"

[tool.setuptools.packages.find]
where = ["."]
